<?xml version="1.0"?>

<package>
  
  <name>sr_plugin_knowrob</name>
  <version>0.0.1</version>
  <description>
    
    KnowRob live feeding plugin for semrec
    
  </description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>semrec</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>json_prolog</build_depend>
  
  <run_depend>semrec</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>json_prolog</run_depend>
  
</package>
